[gd_scene load_steps=4 format=3 uid="uid://dj34w5mvtg6ay"]

[ext_resource type="Script" uid="uid://cxi3aj0ut7676" path="res://weapons/WeaponPickup.gd" id="1_cj8fu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l4p6q"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmcp7"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.545098)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WeaponPickup" type="Node2D"]
script = ExtResource("1_cj8fu")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_l4p6q")

[node name="PickupPrompt" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = -16.0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_qmcp7")
text = "Appuyez sur E"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
